--- a/.htaccess
+++ b/.htaccess
@@ -28,3 +28,9 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}.html -f
 RewriteRule ^([^/]+)/?$ $1.html [NC,L]
+
+# .env dosyasına erişimi engelle
+<Files .env>
+    Order allow,deny
+    Deny from all
+</Files>
